Change request body
Signed-off-by: Denislav Prinov <denislav.prinov@bosch.com>